crates/kirin-derive-core/src/snapshots/kirin_derive_core__name__tests__either_enum_name.snap
---
source: crates/kirin-derive-core/src/name.rs
expression: generate(input)
---
impl ::kirin::ir::HasName for TestEnum {
    fn name(&self) -> String {
        match self {
            Self::VariantA(field_0, ..) => {
                let value = <InnerStructA as ::kirin::ir::HasName>::name(field_0);
                format!("{}.{}", "test_enum", value)
            }
            Self::VariantB { .. } => format!("{}.{}", "test_enum", "variant_b"),
        }
    }
}
