crates/kirin-derive-core/src/snapshots/kirin_derive_core__name__tests__named_wrapper_struct_name_with_custom_name.snap
---
source: crates/kirin-derive-core/src/name.rs
expression: generate(input)
---
impl ::kirin::ir::HasName for TestStruct {
    fn name(&self) -> String {
        let Self { inner, .. } = self;
        let value = <InnerStruct as ::kirin::ir::HasName>::name(inner);
        format!("{}.{}", "custom_struct", value)
    }
}
