crates/kirin-derive-core/src/snapshots/kirin_derive_core__name__tests__regular_enum_name.snap
---
source: crates/kirin-derive-core/src/name.rs
expression: generate(input)
---
impl ::kirin::ir::HasName for TestEnum {
    fn name(&self) -> String {
        match self {
            Self::VariantA => format!("{}.{}", "test_enum", "variant_a"),
            Self::VariantB { .. } => format!("{}.{}", "test_enum", "variant_b"),
            Self::VariantC(..) => format!("{}.{}", "test_enum", "variant_c"),
        }
    }
}
