crates/kirin-derive-core/src/snapshots/kirin_derive_core__name__tests__regular_struct_name_with_custom_name.snap
---
source: crates/kirin-derive-core/src/name.rs
expression: generate(input)
---
impl ::kirin::ir::HasName for TestStruct {
    fn name(&self) -> String {
        "custom_struct".into()
    }
}
