crates/kirin-derive-core/src/snapshots/kirin_derive_core__name__tests__unnamed_wrapper_struct_name.snap
---
source: crates/kirin-derive-core/src/name.rs
expression: generate(input)
---
impl ::kirin::ir::HasName for TestStruct {
    fn name(&self) -> String {
        let Self(field_0, ..) = self;
        <InnerStruct as ::kirin::ir::HasName>::name(field_0)
    }
}
